--- a/hat_resnet50_config.config
+++ b/hat_resnet50_config.config
@@ -10,7 +10,7 @@ model {
     image_resizer {
       keep_aspect_ratio_resizer {
         min_dimension: 600
-        max_dimension: 1024
+        max_dimension: 800
       }
     }
     feature_extractor {
@@ -105,11 +105,11 @@ train_config: {
   gradient_clipping_by_norm: 10.0
   fine_tune_checkpoint: "C:\\dev\\models\\research\\object_detection\\faster_rcnn_resnet50_coco_2018_01_28\\model.ckpt"
   from_detection_checkpoint: true
-  # Note: The below line limits the training process to 200K steps, which we
+  # Note: The below line limits the training process to 10K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  num_steps: 200000
+  num_steps: 10000
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -118,21 +118,21 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\\dev\\models\\research\\hat_dataset\\TFRecords\\train.record"
+    input_path: "C:\\dev\\models\\research\\hat_dataset\\TFRecords\\hat_train.record"
   }
   label_map_path: "C:\\dev\\models\\research\\hat_dataset\\head_label_map.pbtxt"
 }
 
 eval_config: {
-  num_examples: 498
+  num_examples: 1
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
-  max_evals: 10
+  max_evals: 0
 }
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: ""
+    input_path: "C:\\dev\\models\\research\\hat_dataset\\TFRecords\\hat_val.record"
   }
   label_map_path: "C:\\dev\\models\\research\\hat_dataset\\head_label_map.pbtxt"
   shuffle: false
