--- a/hat_resnet50_config.config
+++ b/hat_resnet50_config.config
@@ -6,7 +6,7 @@
 
 model {
   faster_rcnn {
-    num_classes: 1
+    num_classes: 2
     image_resizer {
       keep_aspect_ratio_resizer {
         min_dimension: 600
@@ -103,7 +103,7 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "C:\\dev\\models\\research\\object_detection\\faster_rcnn_resnet50_coco_2018_01_28\\model.ckpt"
+  fine_tune_checkpoint: "D:\\project3_faster_rcnn\\models-master\\research\\object_detection\\faster_rcnn_resnet50_coco_2018_01_28\\model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 10K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
@@ -118,13 +118,13 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\\dev\\models\\research\\hat_dataset\\TFRecords\\hat_train.record"
+    input_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\TFRecords\\hat_train.record"
   }
-  label_map_path: "C:\\dev\\models\\research\\hat_dataset\\head_label_map.pbtxt"
+  label_map_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\hat_label_map.pbtxt"
 }
 
 eval_config: {
-  num_examples: 150
+  num_examples: 498
   # Note: The below line limits the evaluation process to 10 evaluations.
   # Remove the below line to evaluate indefinitely.
   max_evals: 10
@@ -132,9 +132,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "C:\\dev\\models\\research\\hat_dataset\\TFRecords\\hat_val.record"
+    input_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\TFRecords\\hat_val.record"
   }
-  label_map_path: "C:\\dev\\models\\research\\hat_dataset\\head_label_map.pbtxt"
+  label_map_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\hat_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
