reduce the detection threshold

--- a/test_configuration.config
+++ b/test_configuration.config
@@ -18,19 +18,19 @@ use_normalized_coordinates=False
 
 [test_video_config]
 frame_num_for_judge=10
-nms_threshold=0.65
+nms_threshold=0.7
 min_prob=0.5
-min_x=0.05
-min_y=0.03
+min_x=0.02
+min_y=0.01
 min_area=0.002
-min_ratio = 0.8
+min_ratio = 0.6
 interval = 5
 
 [yolo_test_video_path]
 video_list_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\video_data\video
 video_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\test_models_log\Misjudge\yolo\1.mp4
 output_video_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\test_models_log\Misjudge\yolo
-out_log_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\test_models_log\yolo_log\
+out_log_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\test_models_log\yolo_log(lianxu)\
 
 [frcnn_test_video_path]
 video_list_path = D:\project3_faster_rcnn\models-master\research\hat_dataset\video_data\video
