--- a/model_training/faster_rcnn_resnet50.config
+++ b/model_training/faster_rcnn_resnet50.config
@@ -103,13 +103,13 @@ train_config: {
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "D:\\project3_faster_rcnn\\models-master\\research\\object_detection\\faster_rcnn_resnet50_coco_2018_01_28\\model.ckpt"
+  fine_tune_checkpoint: "./object_detection/pre_trained_models/faster_rcnn_resnet50_coco_2018_01_28/model.ckpt"
   from_detection_checkpoint: true
   # Note: The below line limits the training process to 10K steps, which we
   # empirically found to be sufficient enough to train the pets dataset. This
   # effectively bypasses the learning rate schedule (the learning rate will
   # never decay). Remove the below line to train indefinitely.
-  num_steps: 10000
+  num_steps: 100000
   data_augmentation_options {
     random_horizontal_flip {
     }
@@ -118,9 +118,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\TFRecords\\hat_train.record"
+    input_path: "./hat_detection/model_training/hat_train.record"
   }
-  label_map_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\hat_label_map.pbtxt"
+  label_map_path: "./hat_detection/hat_label_map.pbtxt"
 }
 
 eval_config: {
@@ -132,9 +132,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\TFRecords\\hat_val.record"
+    input_path: "./hat_detection/model_training/hat_val.record"
   }
-  label_map_path: "D:\\project3_faster_rcnn\\models-master\\research\\hat_dataset\\hat_label_map.pbtxt"
+  label_map_path: "./hat_detection/hat_label_map.pbtxt"
   shuffle: false
   num_readers: 1
 }
