--- a/model_training/faster_rcnn_resnet50.config
+++ b/model_training/faster_rcnn_resnet50.config
@@ -113,6 +113,9 @@ train_config: {
   data_augmentation_options {
     random_horizontal_flip {
     }
+    random_adjust_brightness {
+    max_delta: 0.2
+    }
   }
 }
 
