--- a/test_configuration.config
+++ b/test_configuration.config
@@ -10,10 +10,10 @@ use_normalized_coordinates=True
 [test_video_config]
 frame_num_for_judge=10
 nms_threshold=0.7
-min_prob=0.5
+min_prob=0.99
 min_x=0.02
 min_y=0.01
-min_area=0.001
+min_area=0.008
 min_ratio = 0.5
 interval = 5
 
@@ -26,10 +26,10 @@ out_log_path = D:\project3_faster_rcnn\models-master\research\hat_detection\test
 
 
 [frcnn_test_video_path]
-video_list_path = D:\project3_faster_rcnn\models-master\research\hat_detection\video_data\miss
+video_list_path = .\hat_detection\video_data\miss
 video_path = .\hat_detection\video_data\test_video\D21_S20181116120035E20181116123059.mp4
-output_video_path =
-out_log_path = D:\project3_faster_rcnn\models-master\research\hat_detection\test_log\video_list_result
+output_video_path = .\test_log
+out_log_path = .\hat_detection\test_log\video_list_result
 
 [test_image_path]
 image_path = D:\project3_faster_rcnn\models-master\research\hat_detection\test_log\image\
