--- a/test_configuration.config
+++ b/test_configuration.config
@@ -3,17 +3,17 @@ model_name = frcnn
 
 [faster_rcnn_model]
 config_path = .\hat_detection\faster_rcnn_resnet50.config
-PATH_TO_FROZEN_GRAPH = D:\project3_faster_rcnn\models-master\research\hat_detection\saved_models\faster_rcnn_resnet50_single_nohat\frozen_inference_graph.pb
-PATH_TO_LABELS = D:\project3_faster_rcnn\models-master\research\hat_detection\hat_label_map.pbtxt
+PATH_TO_FROZEN_GRAPH = .\saved_models\faster_rcnn_resnet50_single_nohat\frozen_inference_graph.pb
+PATH_TO_LABELS = .\hat_label_map.pbtxt
 use_normalized_coordinates=True
 
 [test_video_config]
 frame_num_for_judge=10
 nms_threshold=0.7
-min_prob=0.99
+min_prob=0.5
 min_x=0.02
 min_y=0.01
-min_area=0.008
+min_area=0.0001
 min_ratio = 0.5
 interval = 5
 
@@ -26,10 +26,14 @@ out_log_path = D:\project3_faster_rcnn\models-master\research\hat_detection\test
 
 
 [frcnn_test_video_path]
+ts_video_path = .\video_data\test_video\index3.ts
+output_image_path = .\video_data\output_info
+output_info_path = .\video_data\output_info
+
 video_list_path = .\hat_detection\video_data\miss
-video_path = .\hat_detection\video_data\test_video\D21_S20181116120035E20181116123059.mp4
 output_video_path = .\test_log
 out_log_path = .\hat_detection\test_log\video_list_result
+
 
 [test_image_path]
 image_path = D:\project3_faster_rcnn\models-master\research\hat_detection\test_log\image\
